<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ccc">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#369"
        android:padding="8dp">

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/btn_scan" />

        <Button
            android:id="@+id/btn_discon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/btn_discon"
            android:visibility="gone" />

        <TextView
            android:id="@+id/label_device_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/label_device_list"
            android:textColor="#fff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/label_control_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/label_control_panel"
            android:textColor="#fff"
            android:textSize="16sp"
            android:visibility="gone" />
    </RelativeLayout>

    <ListView
        android:id="@+id/list_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/header"
        android:visibility="visible"

        android:background="#efefef"></ListView>

    <RelativeLayout
        android:id="@+id/control_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:background="#efefef"
        android:padding="8dp"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/label_device_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:padding="8dp"
            android:text="@string/label_device_status"
            android:background="#036"
            android:textColor="#fff"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/btn_request_empty"
                    style=""
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="requestEmpty"
                    android:text="@string/btn_empty" />

                <Button
                    android:id="@+id/btn_request_occupied"
                    style=""
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="requestOccupied"
                    android:text="@string/btn_occupied" />

                <Button
                    android:id="@+id/btn_request_rest"
                    style=""
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="requestRest"
                    android:text="@string/btn_rest" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="directOn"
                    android:text="제어 시작" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="directOff"
                    android:text="제어 해제" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:onClick="requestTachoInfo"
                    android:text="타코 정보" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@+id/label_device_status"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/linearLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:textColor="#333"
                android:id="@+id/tachoInfoCarNumber" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:textColor="#333"
                android:id="@+id/tachoInfoBusinessNumber" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:textColor="#333"
                android:id="@+id/tachoInfoPhoneNumber" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:textColor="#333"
                android:id="@+id/tachoInfoMobileNumber" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_marginTop="4dp"
                android:textColor="#333"
                android:id="@+id/tachoInfoEtc" />
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:textColor="#333"
                android:id="@+id/indicatorStatusView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#333"
                android:id="@+id/meterStatusView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:textColor="#555"
                android:id="@+id/dateView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:textColor="#777"
                android:id="@+id/inOutView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:textColor="#777"
                android:id="@+id/infoView" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>